# Custom-OSPF

./: Cargo.toml  README.md  Rapport.md  router.json
.github/workflows/: release.yml
logs/: log_r1.txt  log_r2.txt  log_r3.txt  log_r4.txt  log_r5.txt  r1_protocol_commands.txt  r2_down.txt
src/: config.rs  control_server.rs  interfaces.rs  lib.rs  main.rs  message.rs  messages.rs  neighbor.rs  neighbors.rs  netlink.rs  network.rs  protocol.rs  router.rs  routing.rs  routing_table.rs  system.rs  types.rs
src/algorithms/: dijkstra.rs
src/config/: mod.rs  router_config.rs
src/network/: interface.rs  mod.rs  topology.rs
src/protocol/: message_handler.rs  messages.rs  mod.rs  neighbor.rs  neighbor_manager.rs  route_manager.rs  routing_table.rs  task_manager.rs  types.rs
