[package]
name = "custom-ospf"
version = "0.1.0"
edition = "2024"
description = "Custom Implementation of OSPF protocol"
license = "MIT"
authors = ["Luca Ceccarelli <luca.ceccarelli@etu.mines-ales.fr>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
ipnet = "2.9"
pnet = "0.34"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"