[package]
name = "custom-ospf"
version = "0.1.0"
edition = "2024"
description = "Custom Implementation of OSPF protocol"
license = "MIT"
authors = ["Luca Ceccarelli <luca.ceccarelli@etu.mines-ales.fr>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
rtnetlink = "0.9"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.98"